--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,7 +1,6 @@
 name: Deploy to Staging Environment
 
 on:
-  workflow_dispatch:
   pull_request:
     branches: ['main']
     types:
@@ -14,19 +13,51 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  get-deploy-inputs:
+    name: Get Deploy Inputs
+    runs-on: [self-hosted, Linux, X64]
+    outputs:
+      trigger_source: ${{ steps.set-outputs.outputs.trigger_source }}
+      release_version: ${{ steps.extract-release-info.outputs.release_version }}
+      release_ticket_id: ${{ steps.extract-release-info.outputs.release_ticket_id }}
+    steps:
+      - name: Set outputs
+        id: set-outputs
+        run: echo "trigger_source=${{ format('Triggered via PR <{0}|#{1}> by <{2}|{3}>', github.event.pull_request.html_url, github.event.pull_request.number, format('{0}/{1}', github.server_url, github.actor), github.actor) }}" >> $GITHUB_OUTPUT
+
+      - name: Extract release info from branch
+        id: extract-release-info
+        if: startsWith(github.head_ref, 'release/') || startsWith(github.head_ref, 'hotfix-release/')
+        env:
+          HEAD_REF: ${{ github.head_ref }}
+        run: |
+          echo "Branch name: $HEAD_REF"
+          
+          # Extract version and ticket from branch name (format: release/3.2.1-SDK-1234 or hotfix-release/3.2.2-SDK-5678)
+          version=$(echo "$HEAD_REF" | sed -n 's|.*\/\([0-9]\+\.[0-9]\+\.[0-9]\+\)-.*|\1|p')
+          ticket=$(echo "$HEAD_REF" | sed -n 's|.*-\([^-]*\)$|\1|p')
+          
+          echo "Extracted version: $version"
+          echo "Extracted ticket: $ticket"
+          
+          echo "release_version=$version" >> $GITHUB_OUTPUT
+          echo "release_ticket_id=$ticket" >> $GITHUB_OUTPUT
+
   deploy:
     name: Deploy to staging environment
-    # Only manually run the workflow for tags
-    # and PRs raised from release branches to main
-    if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.head_ref, 'hotfix-release/') || startsWith(github.head_ref, 'release/')
+    needs: [get-deploy-inputs]
+    # Only allow running this workflow for PRs raised from release branches to main
+    if: startsWith(github.head_ref, 'hotfix-release/') || startsWith(github.head_ref, 'release/')
     uses: ./.github/workflows/deploy.yml
     with:
       environment: 'staging'
       bugsnag_release_stage: 'staging'
       s3_dir_path: 'staging/latest/v3'
       s3_dir_path_legacy: 'staging/latest/v1.1'
-      action_type: ''
-      use_pr_head_sha: 'true'
+      use_pr_head_sha: true
+      trigger_source: ${{ needs.get-deploy-inputs.outputs.trigger_source }}
+      monorepo_release_version: ${{ needs.get-deploy-inputs.outputs.release_version }}
+      release_ticket_id: ${{ needs.get-deploy-inputs.outputs.release_ticket_id }}
     secrets:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_STAGING_ACCOUNT_ID }}
       AWS_S3_BUCKET_NAME: ${{ secrets.AWS_STAGING_S3_BUCKET_NAME }}
@@ -38,11 +69,14 @@ jobs:
 
   deploy-sanity-suite:
     name: Deploy sanity suite
-    needs: deploy
+    needs: [get-deploy-inputs]
     uses: ./.github/workflows/deploy-sanity-suite.yml
     with:
       environment: 'staging'
-      use_pr_head_sha: 'true'
+      use_pr_head_sha: true
+      trigger_source: ${{ needs.get-deploy-inputs.outputs.trigger_source }}
+      monorepo_release_version: ${{ needs.get-deploy-inputs.outputs.release_version }}
+      release_ticket_id: ${{ needs.get-deploy-inputs.outputs.release_ticket_id }}
     secrets:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_STAGING_ACCOUNT_ID }}
       AWS_S3_BUCKET_NAME: ${{ secrets.AWS_STAGING_S3_BUCKET_NAME }}
@@ -57,10 +91,13 @@ jobs:
 
   run-e2e-regression-test-suites:
     uses: ./.github/workflows/run-e2e-regression-test-suites.yml
-    needs: deploy-sanity-suite
     name: Run E2E Regression Test Suites
+    needs: [get-deploy-inputs, deploy-sanity-suite, deploy]
     with:
       environment: staging
-      use_pr_head_sha: 'true'
+      trigger_source: ${{ needs.get-deploy-inputs.outputs.trigger_source }}
+      use_pr_head_sha: true
+      monorepo_release_version: ${{ needs.get-deploy-inputs.outputs.release_version }}
+      release_ticket_id: ${{ needs.get-deploy-inputs.outputs.release_ticket_id }}
     secrets:
       PAT: ${{ secrets.PAT }}
