--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,7 +26,7 @@ updates:
       npm-prod-deps:
         patterns:
           - "*"
-        excludes:
+        exclude-patterns:
           - "@nx/nx-*"
           - "@rollup/rollup-*"
         update-types:
