feat: add legacy utils package

--- a/packages/analytics-js/tsconfig.spec.json
+++ b/packages/analytics-js/tsconfig.spec.json
@@ -21,6 +21,7 @@
     "./package.json",
     "../../types/**/*",
     "../analytics-js-plugins/src/**/*",
-    "../analytics-js-common/src/**/*"
+    "../analytics-js-common/src/**/*",
+    "../analytics-js-cookies/src/**/*"
   ]
 }
