--- a/packages/analytics-js-legacy-utilities/package.json
+++ b/packages/analytics-js-legacy-utilities/package.json
@@ -57,7 +57,7 @@
     "release": "npm publish"
   },
   "dependencies": {
-    "ramda": "0.30.1",
+    "ramda": "0.31.3",
     "rudder-component-cookie": "0.0.1",
     "@segment/top-domain": "3.0.1",
     "crypto-js": "4.2.0",
@@ -77,14 +77,7 @@
       "Opera >= 43"
     ],
     "modern": [
-      "defaults",
-      "supports es6-module-dynamic-import"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 edge version",
-      "last 1 safari version"
+      "defaults"
     ]
   }
 }
