--- a/packages/loading-scripts/package.json
+++ b/packages/loading-scripts/package.json
@@ -48,19 +48,11 @@
   "overrides": {},
   "browserslist": {
     "production": [
-      "defaults",
-      "Edge >= 80",
-      "Firefox >= 47",
-      "IE >= 11",
-      "Chrome >= 54",
-      "Safari >= 7",
-      "Opera >= 43"
+      "> 0.1%",
+      "IE >= 11"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 edge version",
-      "last 1 safari version"
+    "modern": [
+      "defaults and supports es6-module-dynamic-import and not dead"
     ]
   }
 }
