--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -78,11 +78,8 @@
       "Safari >= 7",
       "Opera >= 43"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 edge version",
-      "last 1 safari version"
+    "modern": [
+      "defaults"
     ]
   }
 }
