chore: fix browserslist config

--- a/packages/analytics-js-integrations/package.json
+++ b/packages/analytics-js-integrations/package.json
@@ -111,7 +111,7 @@
       "Opera >= 43"
     ],
     "modern": [
-      "defaults"
+      "defaults and supports es6-module-dynamic-import and not dead"
     ]
   }
 }
