chore: skip steps if no projects are affected

--- a/.github/workflows/unit-tests-and-lint.yml
+++ b/.github/workflows/unit-tests-and-lint.yml
@@ -47,10 +47,12 @@ jobs:
           echo "affected_projects=$AFFECTED_PROJECTS" >> $GITHUB_OUTPUT
 
       - name: Execute unit tests
+        if: ${{ steps.check_affected.outputs.affected_projects != '' }}
         run: |
           npm run test:ci
 
       - name: Upload coverage reports to Codecov
+        if: ${{ steps.check_affected.outputs.affected_projects != '' }}
         uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24  # v5.4.3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
@@ -58,14 +60,17 @@ jobs:
           files: ./packages/analytics-js/reports/coverage/clover.xml,./packages/analytics-js-common/reports/coverage/clover.xml,./packages/analytics-js-integrations/reports/coverage/clover.xml,./packages/analytics-js-plugins/reports/coverage/clover.xml,./packages/analytics-js-service-worker/reports/coverage/clover.xml,./packages/analytics-v1.1/reports/coverage/clover.xml,./packages/analytics-js-cookies/reports/coverage/clover.xml
 
       - name: Execute linting check
+        if: ${{ steps.check_affected.outputs.affected_projects != '' }}
         run: |
           npm run check:lint:ci
 
       - name: Fix filesystem paths in generated reports
+        if: ${{ steps.check_affected.outputs.affected_projects != '' }}
         run: |
           ./scripts/fix-reports-path-in-github-runner.sh
 
       - name: SonarQube Scan
+        if: ${{ steps.check_affected.outputs.affected_projects != '' }}
         uses: SonarSource/sonarqube-scan-action@2500896589ef8f7247069a56136f8dc177c27ccf  # v5.2.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
