chore: fix conditions for jobs to run when prs are merged

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -43,6 +43,7 @@ jobs:
 
   deploy-sanity-suite:
     name: Deploy sanity suite
+    if: github.event.pull_request.merged == true
     needs: [get-deploy-inputs]
     uses: ./.github/workflows/deploy-sanity-suite.yml
     with:
